// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends list item component will render correctly with full friend data 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]"><a href="/profile/bob32" target="_blank" rel="noopener noreferrer" class="no-style group relative rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[64px] w-[64px] shadow-inner shadow-grey-800 cursor-pointer"><span class="relative"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg"><!--v-if--></span>
      <!--v-if-->
      <div class="absolute top-[105%] left-2 min-w-44 opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 flex flex-wrap bg-secondary-dark p-1 rounded-md shadow-lg shadow-grey-800/60 text-xs z-[55] transition-opacity ease-in-out duration-200"><label class="font-bold text-right w-2/5">Joined:</label><span class="w-3/5 px-1 text-pretty">3 years ago</span><label class="font-bold text-right w-2/5">Username:</label><span class="w-3/5 px-1 text-pretty">@bob32</span><label class="font-bold text-right w-2/5">Location:</label><span class="w-3/5 px-1 text-pretty">San Francisco, CA</span></div>
    </a></div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl text-2xl" data-testid="select-friend-bob32" type="button">
        <!--v-if-->Bob the Diver
      </button><span class="font-bold">@bob32</span></p>
    <div class="grid grid-cols-2 lg:grid-cols-4">
      <div class="text-center"><label class="font-bold">Friends since</label>
        <p class="text-sm">2 months ago</p>
      </div>
      <div class="text-center"><label class="font-bold">Member since</label>
        <p class="text-sm">3 years ago</p>
      </div>
      <div class="text-center"><label class="font-bold">Location</label>
        <p class="text-sm">San Francisco, CA</p>
      </div>
      <div class="text-center"><label class="font-bold">Pages</label>
        <p class="text-sm space-x-2"><a href="/profile/bob32" class="space-x-1"><span>View profile</span></a><a href="/logbook/bob32" class="space-x-1"><span>View logbook</span></a></p>
      </div>
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md bg-gradient-to-t disabled:text-grey-300 from-danger-dark hover:to-danger-hover to-danger" data-testid="unfriend-bob32" type="button">
      <!--v-if--> Unfriend
    </button></div>
</li>"
`;

exports[`Friends list item component will render correctly with partial friend data 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]"><a href="/profile/bob32" target="_blank" rel="noopener noreferrer" class="no-style group relative rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[64px] w-[64px] shadow-inner shadow-grey-800 cursor-pointer"><span class="relative"><img class="rounded-full" width="64px" height="64px" alt="" src="https://ui-avatars.com/api/?name=bob32"><!--v-if--></span>
      <!--v-if-->
      <div class="absolute top-[105%] left-2 min-w-44 opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 flex flex-wrap bg-secondary-dark p-1 rounded-md shadow-lg shadow-grey-800/60 text-xs z-[55] transition-opacity ease-in-out duration-200"><label class="font-bold text-right w-2/5">Joined:</label><span class="w-3/5 px-1 text-pretty">3 years ago</span><label class="font-bold text-right w-2/5">Username:</label><span class="w-3/5 px-1 text-pretty">@bob32</span><label class="font-bold text-right w-2/5">Location:</label><span class="w-3/5 px-1 text-pretty">Not specified</span></div>
    </a></div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl text-2xl" data-testid="select-friend-bob32" type="button">
        <!--v-if-->@bob32
      </button>
      <!--v-if-->
    </p>
    <div class="grid grid-cols-2 lg:grid-cols-4">
      <div class="text-center"><label class="font-bold">Friends since</label>
        <p class="text-sm">2 months ago</p>
      </div>
      <div class="text-center"><label class="font-bold">Member since</label>
        <p class="text-sm">3 years ago</p>
      </div>
      <div class="text-center"><label class="font-bold">Location</label>
        <p class="text-sm">Unspecified</p>
      </div>
      <div class="text-center"><label class="font-bold">Pages</label>
        <p class="text-sm space-x-2"><a href="/profile/bob32" class="space-x-1"><span>View profile</span></a><a href="/logbook/bob32" class="space-x-1"><span>View logbook</span></a></p>
      </div>
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md bg-gradient-to-t disabled:text-grey-300 from-danger-dark hover:to-danger-hover to-danger" data-testid="unfriend-bob32" type="button">
      <!--v-if--> Unfriend
    </button></div>
</li>"
`;
